--- a/src/components/Canvas.scss
+++ b/src/components/Canvas.scss
@@ -1,7 +1,10 @@
+@import "../styles/variables.scss";
+
 .canvas {
   text-align: center;
   margin: auto;
-  margin-top: 100px;
+  // margin-left: $sidebar-width;
+  margin-top: 20px;
   width: 600px;
   height: 600px;
   border: 2px solid red;
