--- a/src/components/Chatbot/NavOptions.css
+++ b/src/components/Chatbot/NavOptions.css
@@ -9,6 +9,6 @@
   padding: 0.5rem;
   border-radius: 25px;
   background: transparent;
-  border: 1px solid green;
+  border: 1px solid #282F44;
   margin: 3px;
 }
