start work on text component

--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -4,7 +4,8 @@
   grid-area: main;
   align-self: center;
   margin: auto;
-  width: 600px;
-  height: 600px;
+  width: 850px;
+  height: 1100px;
   border: 2px solid red;
+  z-index: -10;
 }
