--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .left {
-  position: fixed;
+  position: absolute;
   left: 0;
   height: 100%;
   width: $sidebar-width;
