--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -8,6 +8,7 @@
   margin-left: $sidebar-width;
   width: 850px;
   height: 1100px;
+  background-color: burlywood;
   border: 2px solid red;
   // z-index: -10;
 }
