--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -9,6 +9,33 @@
   border: 1px solid red;
 }
 
+.text-container {
+  // margin-right: $sidebar-width;
+  position: absolute;
+  right: 100%;
+  margin-top: -32px;
+  width: 400px;
+  height: 200px;
+  background-color: #ffffff;
+  border: 1px solid red;
+  z-index: 200;
+  .close {
+    position: absolute;
+    background: inherit;
+    color: red;
+    top: -30px;
+    right: -30px;
+}
+  .textbox {
+    width: 380px;
+    height: 150px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    // font-family: Arial, Helvetica, sans-serif;
+  }
+}
+
 .ql-editor {
   height: 150px !important;
   font-size: 14px
