--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,10 +6,16 @@
 
 .main {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: center;
+    background: rgb(122,137,194);
+background: linear-gradient(0deg, rgba(122,137,194,1) 0%, rgba(227,215,255,1) 100%);
     // grid-template-columns: 20% 60% 20%;
     // grid-template-rows: 100%;
     // gap: 1px 1px;
     // grid-template-areas: "left | canvas | right";
+}
+
+.canvasOverride {
+    display: flex;
+    position: center;
 }
