--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -5,11 +5,13 @@
   // grid-area: canvas;
   justify-content: center;
   align-self: center;
+  margin-top: 10px;
   margin-left: $sidebar-width;
-  width: 794px;
-  height: 1123px;
-  background-color: burlywood;
-  border: 2px solid red;
+  margin-right: $sidebar-width;
+  width: 850px;
+  height: 1100px;
+  border: 3px solid #72788D;
   // z-index: -10;
+  background-color: #E3D7FF;  
 }
 
