--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -5,6 +5,12 @@
   left: 0;
   height: 100%;
   width: $sidebar-width;
-  // z-index: 1;
-  border: 1px solid red;
+  border: 2px solid #72788D;
+  border-top: 0px;
+  padding-top: 5px;
+  z-index: 20;
+}
+
+.MuiButton-outlinedPrimary {
+  padding: 5px;
 }
