--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -7,10 +7,22 @@
   width: $sidebar-width;
   border: 2px solid #72788D;
   border-top: 0px;
+  box-shadow: 4px 4px 5px 0px #8672B3;
   padding-top: 5px;
   z-index: 20;
 }
 
 .MuiButton-outlinedPrimary {
   padding: 5px;
+  background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.MuiButton-label {
+  color: white;
+  
+}
+
+.MuiAppBar-colorPrimary {
+  background-color: #72788D;
 }
