--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -7,6 +7,7 @@
   width: $sidebar-width;
   border: 2px solid #72788D;
   border-top: 0px;
+  box-shadow: -4px 4px 5px 0px #8672B3;
   padding-top: 5px;
   z-index: 20;
 }
