--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -10,6 +10,7 @@
   box-shadow: -4px 4px 5px 0px #8672B3;
   padding-top: 5px;
   z-index: 20;
+  background: rgba(114, 120, 141, .3);
 }
 
 .text-container {
