--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -11,8 +11,11 @@
   width: 850px;
   height: 1100px;
   border: 3px solid #72788D;
-  box-shadow: 0px 0px 5px 5px #FFFCD6;
+  box-shadow: 0px 0px 5px 5px #8672B3;
   // z-index: -10;
   background-color: #E3D7FF;  
 }
 
+.canvas:hover {
+  box-shadow: 0px 0px 5px 5px #FFFCD6;
+}
