--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -13,6 +13,10 @@
   background: rgba(114, 120, 141, .3);
 }
 
+.left:hover {
+  box-shadow: 0px 10px 5px 5px #FFFCD6;
+}
+
 .MuiButton-outlinedPrimary {
   padding: 5px;
   background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
