--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -14,7 +14,8 @@
 }
 
 .right:hover {
-  box-shadow: 0px 10px 5px 5px #FFFCD6;
+  box-shadow: 0px 8px 5px 5px #FFFCD6;
+  width: $sidebar-width * 1.5;
 }
 
 .text-container {
