--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -14,22 +14,24 @@
 }
 
 .left:hover {
-  box-shadow: 0px 10px 5px 5px #FFFCD6;
+  box-shadow: 0px 8px 5px 5px #FFFCD6;
 }
 
 .MuiButton-outlinedPrimary {
   padding: 5px;
   background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
   font-family: Arial, Helvetica, sans-serif;
+  border: solid 10px #162521;
 }
 
 .MuiButton-label {
   color: whitesmoke;
   text-shadow: #000 0px 0px 1px;
-  border: #242038;
+  border: #162521;
   
 }
 
 .MuiAppBar-colorPrimary {
   background-color: #72788D;
+  border: ridge 6px #162521;
 }
