--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -13,6 +13,6 @@
   border: 3px solid #72788D;
   box-shadow: 0px 0px 5px 5px #FFFCD6;
   // z-index: -10;
-  background-color: #E3D7FF;  
+  // background-color: #E3D7FF;  
 }
 
