--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -14,7 +14,7 @@
 }
 
 .left:hover {
-  box-shadow: 0px 8px 5px 5px #FFFCD6;
+  background: rgba(114, 120, 141, .4);
 }
 
 .MuiButton-outlinedPrimary {
@@ -31,7 +31,15 @@
   
 }
 
+// This code affects the top NavBar: 
 .MuiAppBar-colorPrimary {
   background-color: #72788D;
-  border: ridge 6px #162521;
+  border: ridge 4px #162521;
+
+}
+
+.navBar {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
 }
