--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -14,8 +14,7 @@
 }
 
 .right:hover {
-  box-shadow: 0px 8px 5px 5px #FFFCD6;
-  width: $sidebar-width * 1.5;
+  background: rgba(114, 120, 141, .4);
 }
 
 .text-container {
