--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,7 @@
 @import "../styles/variables.scss";
 
+
+
 body {
   height: 100%;
   // background: rgb(122,137,194);
@@ -10,18 +12,15 @@ body {
   text-align: center;
 }
 
+.MuiButton-root {
+  font-family: 'Montserrat', sans-serif !important;
+  text-transform: none !important;
+
+}
+
 .main {
   display: flex;
   justify-content: center;
   margin-bottom: 60px;
-  // grid-template-columns: 20% 60% 20%;
-  // grid-template-rows: 100%;
-  // gap: 1px 1px;
-  // grid-template-areas: "left | canvas | right";
 }
 
-.navBar {
-background: rgb(99,107,97);
-background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
-padding-bottom: 5px;
-}
