--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -14,7 +14,7 @@
   .MuiButton-outlinedPrimary {
     padding: 5px;
     background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
-    font-family: Arial, Helvetica, sans-serif;
+    // font-family: Arial, Helvetica, sans-serif;
     .left:hover {
       box-shadow: 0px 8px 5px 5px #FFFCD6;
     }
