--- a/src/components/Left/Templates/TemplateMockups/VertBoxTemp02.scss
+++ b/src/components/Left/Templates/TemplateMockups/VertBoxTemp02.scss
@@ -83,7 +83,7 @@ body {
   display: flex;
   justify-content: center;
   padding: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .item {
