--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -15,6 +15,7 @@ body {
 .MuiButton-root {
   font-family: 'Montserrat', sans-serif !important;
   text-transform: none !important;
+  // color: #F51443 !important
 
 }
 
