--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,5 @@ body {
   font-family: 'Monoton', cursive;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Oswald', sans-serif;
+  color: #F51443 !important
 }
-
-// code {
-//   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-//     monospace;
-// }
