--- a/src/components/Home/Navbar.scss
+++ b/src/components/Home/Navbar.scss
@@ -10,6 +10,7 @@
   .MuiTypography-h6 {
     font-size: 1.5em;
     font-family: 'Monoton', cursive !important;
+    // color: #F51443 !important
 
   }
 }
