--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -1,5 +1,9 @@
 @import "../../styles/variables.scss";
 
+.left:hover {
+  background: rgba(114, 120, 141, .4);
+}
+
 .left {
   position: absolute;
   left: 0;
@@ -15,9 +19,6 @@
     padding: 5px;
     background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
     font-family: Arial, Helvetica, sans-serif;
-    .left:hover {
-      box-shadow: 0px 8px 5px 5px #FFFCD6;
-    }
     .MuiButton-label {
       color: whitesmoke;
       text-shadow: #000 0px 0px 1px;
