--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -15,6 +15,7 @@
   padding-top: 5px;
   z-index: 20;
   background: rgba(114, 120, 141, .3);
+
   .MuiButton-outlinedPrimary {
     padding: 5px;
     background: linear-gradient(180deg, #72788D 10%, #72788D 100%);
@@ -23,11 +24,25 @@
       box-shadow: 0px 8px 5px 5px #FFFCD6;
     }
 
+    .MuiButton-text {
+      color: whitesmoke;
+      text-shadow: #000 0px 0px 1px;
+      border: #162521;
+      border: none;
+    }
+  
     .MuiButton-label {
       color: whitesmoke;
       text-shadow: #000 0px 0px 1px;
       border: #162521;
+      border: none;
     }
   }
 }
 
+  .MuiButton-root {
+      color: white;
+      background-color: #72788D;
+      border: none;
+    }
+    
