Image-based templates implemented

--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -40,9 +40,12 @@
   }
 }
 
-  .MuiButton-root {
-      color: white;
-      background-color: #72788D;
-      border: none;
-    }
-    
+.MuiButton-root {
+    color: white;
+    background-color: #72788D;
+    border: none;
+}
+
+.MuiList-padding {
+  padding: 0px !important;
+}
