--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -19,7 +19,7 @@
     right: 100%;
     margin-top: -32px;
     width: 400px;
-    height: 200px;
+    height: 100%;
     background-color: #ffffff;
     // border: 1px solid red;
     z-index: 200;
