Pushing to merge.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,7 +8,12 @@ body {
   background: linear-gradient(0deg, rgba(122,137,194,1) 0%, rgba(227,215,255,1) 100%);
 }
 
+.main {
+  height: 100%;
+}
+
 .App {
+  height: 100%;
   text-align: center;
 }
 
