--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -7,7 +7,7 @@
 .left {
   position: absolute;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: $sidebar-width;
   border: 2px solid #72788D;
   border-top: 0px;
@@ -64,4 +64,12 @@
   // height: 50%;
   // flex-direction: column;
   // justify-content: start;
+}
+
+.MrCan {
+  width: 100px;
+  position: fixed;
+  bottom: 0.01vw;
+  left: 2vh;
+  margin-bottom: 10px;
 }
