--- a/src/components/Left/Left.scss
+++ b/src/components/Left/Left.scss
@@ -7,7 +7,7 @@
 .left {
   position: absolute;
   left: 0;
-  height: 100vh;
+  height: 1179px;
   width: $sidebar-width;
   border: 2px solid #72788D;
   border-top: 0px;
