--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -5,7 +5,7 @@
 .right {
   position: absolute;
   right: 0;
-  height: 100vh;
+  height: 1179px;
   width: $sidebar-width;
   border: 2px solid #72788D;
   border-top: 0px;
