--- a/src/components/Right/Imports.scss
+++ b/src/components/Right/Imports.scss
@@ -7,3 +7,14 @@
 .imports>div>img {
   margin: 10px;
 }
+
+.imports>button {
+  border: 1px solid rgba(63, 81, 181, 0.5);
+  padding: 5px 15px;
+  color: #000000;
+  background-color: #F1F1F0;
+  font-size: 0.99rem;
+  border-radius: 4px;
+  height: 110px;
+  width: 90%;
+}
