--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -99,7 +99,7 @@ iframe {
   height: 100% !important;
   margin-top: 64px; 
   #plugin {
-    margin-top: 64px;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-content: center;;
