add robot pngs to clippings

--- a/src/components/Right/Imports.scss
+++ b/src/components/Right/Imports.scss
@@ -14,7 +14,9 @@
   color: #000000;
   background-color: #F1F1F0;
   font-size: 0.99rem;
+  font-family: 'Montserrat', sans-serif; 
   border-radius: 4px;
   height: 110px;
   width: 90%;
+  margin-top: 20px;
 }
