--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 body {
   margin: 0;
-  font-family: 'Galindo', cursive;
-  font-family: 'Londrina Outline', cursive;
-  font-family: 'Monoton', cursive;
-  font-family: 'Montserrat', sans-serif;
+//   // font-family: 'Galindo', cursive;
+//   // font-family: 'Londrina Outline', cursive;
+//   // font-family: 'Monoton', cursive;
+//   font-family: 'Montserrat', sans-serif;
   font-family: 'Oswald', sans-serif;
   color: #F51443 !important
 }
