--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -79,15 +79,9 @@
   .MuiButton-root {
     color: white;
     background-color: #72788D;
+    margin-top: 30px; 
     
   }
-
-  
-  
-  // .button {
-  //   background: blue;
-  // }
-  
   
   .pdf-appBar{
     .MuiAppBar-positionFixed {
