--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -20,6 +20,7 @@ body {
 .MuiButton-root {
   font-family: 'Montserrat', sans-serif !important;
   text-transform: none !important;
+  border-color:#72788d !important;
   // color: #F51443 !important
 
 }
