--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -19,8 +19,12 @@
     position: absolute;
     right: 100%;
     margin-top: -32px;
-    width: 400px;
-    height: 220px;
+    min-width: 400px;
+    min-height: 220px;
+    max-width: 800px;
+    max-height: 800px;
+    border-radius: 5px;
+    padding: 10px;
 
     background-color: #ffffff;
     z-index: 200;
@@ -39,6 +43,7 @@
     }
     button {
       font-family: 'Montserrat', sans-serif;
+      margin: 0;
       
     }
     .custom-buttons {
@@ -50,10 +55,13 @@
       width: inherit
     }
     .textbox {
-      width: 380px;
-      height: 150px;
+      min-width: 380px;
+      min-height: 150px;
       margin: 8px;
       outline: none;
+      border-radius: 5px;
+      max-width: 750px;
+      max-height: 750px;
     }
     .MuiButton-root {
       font-size: 1em;
@@ -61,7 +69,7 @@
     }
     
     div[id^=font-picker]  {
-      width: 20%;
+      width: 30%;
       height: 80%;
       background-color: #ffffff;
       color: #000000;
@@ -83,5 +91,4 @@
     margin-top: 30px; 
     
   }
-
 }
