Styled the splash page.

--- a/src/components/Home/Splash.scss
+++ b/src/components/Home/Splash.scss
@@ -3,6 +3,7 @@
   h1 {
     font-size: 3em;
     font-family: 'Monoton', cursive;
+    text-shadow: 2px 2px 8px #72788D, 3px 3px 3px #FF0000;
   }
   h2 {
   margin: auto;
@@ -10,29 +11,44 @@
   white-space: nowrap;
   overflow: hidden;
   transform: translateY(-50%);    
+  text-shadow: 1px 1px 5px #72788D;
 
   animation: typewriter 4s steps(44) 1s 1 normal both,
              blinkTextCursor 500ms steps(44) infinite normal;
   
   animation-iteration-count: 100;
 
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 24em;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
+  @keyframes typewriter{
+    from{width: 0;}
+    to{width: 24em;}
+  }
+  @keyframes blinkTextCursor{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
+  
   }
   img {
-    width: 10%;
+    padding-left: 5em;
+    height: 40%;
   }
+  
   h3 {
     margin: 1em;
     margin-left: 4em;
-    margin-top: 4em;
+    margin-top: .25em;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
+    font-style: italic;
+  }
+  .topH3 {
+    margin-top: 1.3em;
+  }
+  h5 {
+    color: white;
+    margin: auto;
+    text-align: center;
+    padding-top: 12em;
+    font-weight: 300;
   }
 }
