get delete button to work

--- a/src/components/Right/Right.scss
+++ b/src/components/Right/Right.scss
@@ -30,6 +30,7 @@
     z-index: 200;
     textarea {
       background-color: #f1f1f0;
+      // resize: both; direction: rtl; text-align: center;
     }
     .close {
       position: absolute;
